feat: add eslintrc

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "uview-ui": "^1.8.4"
-  }
+  },
+	"scripts": {
+	  "lint": "eslint 'miniprogram/**/*.js' --fix"
+	}
 }
