--- a/manifest.json
+++ b/manifest.json
@@ -56,6 +56,11 @@
             "es6" : false,
             "minified" : false
         },
+				"permission":{
+					"scope.userLocation": {
+						"desc": "你的位置信息"
+					}
+				},
         "usingComponents" : true
     },
     "mp-alipay" : {
